# CatalystLens

./: .env.example  .gitignore  Makefile  README.md  catalystlens_ai_agent_master_plan.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  logging.py  time.py
apps/api/app/db/: base.py  session.py
apps/api/app/fixtures/: README.md  bars_AAPL.json  bars_NVDA.json  bars_TSLA.json  fundamentals_AAPL.json  fundamentals_ADUR.json  fundamentals_ASTS.json  fundamentals_BABA.json  fundamentals_BMNR.json  fundamentals_BTC.json  fundamentals_ETH.json  fundamentals_HIMS.json  fundamentals_IREN.json  fundamentals_JD.json  fundamentals_NBIS.json  fundamentals_NVDA.json  fundamentals_NVO.json  fundamentals_OSCR.json  fundamentals_QS.json  fundamentals_SOFI.json  fundamentals_TSLA.json  fundamentals_ZETA.json  insider_AAPL.json  insider_ADUR.json  insider_ASTS.json  insider_BABA.json  insider_BMNR.json  insider_BTC.json  insider_ETH.json  insider_HIMS.json  insider_IREN.json  insider_JD.json  insider_NBIS.json  insider_NVDA.json  insider_NVO.json  insider_OSCR.json  insider_QS.json  insider_SOFI.json  insider_TSLA.json  insider_ZETA.json  (+18 more)
apps/api/app/metrics/: session.py  vwap.py
apps/api/app/models/: __init__.py  market_bar.py  symbol.py
apps/api/app/routers/: fundamentals.py  health.py  insider.py  institutional.py  tickers.py
apps/api/app/schemas/: bar.py  fundamentals.py  insider.py  institutional.py  ticker.py
(+94 files in other folders)
